syntax = "proto3";

package user_post;

option go_package = "./proto;user_post";

service UserPost {
  rpc AssemblePostAndUser()
}

message Request{}
message Response{}

message PostAndUser {

}

message 

