syntax = "proto3";

option go_package = "./proto;user";

package user;

service User {
	rpc UserLogin(LoginRequest) returns(LoginResponse) {}

	rpc GetUserProfile(Request) returns(UserProfileResponse){}
	rpc UpdateUserProfile(UserProfileRequest) returns(Response){}
	rpc GetBatchUserProfile(BatchUserProfileRequest) returns(BatchUserProfileResponse){}

	rpc MakeFeedback(MakeFeedbackRequest) returns(Response){}
}

message Request {
	string account = 1;
}

message BatchUserProfileRequest{
	repeated string accounts = 1;
}

message Response {}
enum Sex {
	WOMAN = 0;
	MAN = 1;
}

message LoginRequest{
	string account = 1;
	string password = 2;
}
message LoginResponse{
}

message UserProfileRequest{
	string nickname = 1;
	string avatar = 2;
	string account = 3;
	Sex sex = 4;
}

message UserProfileResponse {
	string account = 1;
	string nickname = 2;
	string avatar = 3;
	int32 days = 4;
	Sex sex = 5;
}

message BatchUserProfileResponse {
	map<string,UserProfileResponse> data = 1;
}

message MakeFeedbackRequest{
	string Account = 1;
	string FeedbackType = 2;
	string Content = 3;
	int32 PostId = 4;
}